--- a/tbb.html
+++ b/tbb.html
@@ -33,8 +33,8 @@
 <td><b>COURSE</b></td>
 <td><b>INSTITUION</b></td>
 <td><b>BROAD UNIVERSITY</b></td>
-<td><b>PERCENTAGE &amp;&amp; CGPA</b></td>
-<td><b>YEAR OF PASSING</b></td>
+<td><b>PERCENTAGE &amp; CGPA</b></td>
+<td><b>  ABOUT </b></td>
 </tr></thead>
 <tbody><tr>
     <th colspan="5">STUDENT :1</th>
@@ -50,7 +50,7 @@
   <td>
       <li>2024</li>
   <li>SILENT</li>
-<li> REPRESENTATIVE </li>
+<li> LEADER</li>
 
   </td>
     </tr>
