--- a/tbb.html
+++ b/tbb.html
@@ -90,7 +90,7 @@
 <td>8.79 </td>
 <td>
  <li>2023</li>
-  <li>RUGGED BOYT</li>
+  <li>RUGGED BOY</li>
 <li> DON </li>
 </td>
 </tr>
@@ -118,7 +118,7 @@
 <td>7.99 </td>
 <td>
  <li>2024</li>
-  <li>CHCOCO BOY</li>
+  <li>SMALL BOY</li>
 <li> ALONE </li>
 </td>
 </tr>
